# rusty-tools

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  test-server.sh  test_database_fixes.sh  test_single_tool.sh
core/: Cargo.toml
core/src/: lib.rs
fixes/: 20250914-CCR-RustyTools.md
server/: Cargo.toml
server/src/: main.rs
src/: database.rs  main.rs
tests/: debug_persistence.sh  debug_protocol.sh  debug_simple.sh  test-server.sh  test_full_persistence.sh
