[package]
name = "rusty-tools"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
rmcp = { version = "0.6.0", features = ["macros", "transport-io"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
which = "7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
