[package]
name = "rusty-tools-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rmcp = { version = "0.6.4", features = ["macros", "transport-io"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
which = "7"
